Fix dro down wrap

--- a/src/sass/BorderRow.scss
+++ b/src/sass/BorderRow.scss
@@ -10,12 +10,11 @@
 }
 
 .row-input-string {
-  align-items: center;
   border-color: #c1c1c1;
   border-radius: 4px;
   border-style: solid;
   border-width: 1px;
-  width: 28%
+  width: 28%;
 }
 
 .row-text-field{
