--- a/src/sass/Dropdown.scss
+++ b/src/sass/Dropdown.scss
@@ -27,10 +27,11 @@
   border-style: solid;
   border-width: 1px;
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   min-height: 25px;
   cursor: pointer;
   overflow: none;
+  height: 90%;
 }
 
 .dropdown-button {
